fix gallery overflow and header size

--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -2,9 +2,7 @@
   width: 100%;
   overflow: hidden;
 }
-.swiper-pagination-bullet {
-  background-color: #ec662c;
-}
+
 .container {
   width: 100%;
   max-width: 1440px;
@@ -13,22 +11,6 @@
 
 .gallery-container {
   position: relative;
-}
-
-.gallery-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  margin: 0 auto;
-}
-
-@media only screen and (min-width: 1440px) {
-  .gallery-img {
-    display: none;
-  }
-  .container {
-    width: 100%;
-  }
 }
 
 .gallery-title {
@@ -47,41 +29,19 @@
   }
 }
 
-@media only screen and (max-width: 1439px) {
-  .swiper-container {
-    // display: none;
-    // width: 1360px;
-  }
-}
-
 .swiper-container {
-  // width: 1360px;
   width: 100%;
+  overflow: hidden;
 }
 
 .swiper-img {
-  border-radius: 12px;
-  width: 306px;
-  height: 680px;
-  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
-}
+  display: block;
+  max-width: 100%;
+  height: 609px;
+  margin: 0 auto;
 
-@media only screen and (min-width: 1440px) {
-  .swiper-img {
-    width: 274px;
-    height: 609px;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.08);
-  }
-  .swiper-container {
-    // width: 1352px;
-    width: 100%;
-    // display: flex;
-    // flex-direction: row;
-    // flex-wrap: wrap;
-  }
-  .swiper-slide {
-    width: calc((100% - 3 * 32px) / 4);
-  }
+  border-radius: 12px;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
 }
 
 .custom-prev,
